# mcsb

./: .hgignore  .hgtags  CMakeLists.txt  LICENSE.md  README.md
apps/: CMakeLists.txt
apps/MCSBManager/: CMakeLists.txt  ClientProxy.cc  ClientZ.cc  DropReporter.cc  GroupManager.cc  Manager.cc  ManagerParams.cc  ProxySlabTracker.cc  RunClientZ.cc  ShmMapper.cc  SlabManager.cc  SlabRequestManager.cc  SocketDaemon.cc  main.cc  main_ClientZ.cc
apps/MCSBManager/MCSB/: ClientProxy.h  ClientZ.h  DropReporter.h  GroupManager.h  Manager.h  ManagerParams.h  ManagerStats.h  ProxySlabTracker.h  ProxyStats.h  ShmMapper.h  SlabManager.h  SlabRequestManager.h  SocketDaemon.h  WantedSegment.h
apps/tools/: CMakeLists.txt  mcsb_blast.cc  mcsb_ping.cc  mcsb_regs.cc  mcsb_sink.cc  mcsb_source.cc
cmake/: BuildStandalone.cmake  FindLibEV.cmake  FindLibVariant.cmake  GetHgRevision.cmake  InstallDirs.cmake  doc.cmake
doc/: Doxyfile.in
examples/: CMakeLists.txt  DescriptorHello.h  ex1_SimpleHello.cc  ex2_DescriptorHello.cc  ex3_ClientWatcher.cc  ex4_VariantClientOptions.cc
include/: CMakeLists.txt
include/MCSB/: BaseClient.h  Client.h  ClientCallbacks.h  ClientOptions.h  ClientWatcher.h  MCSBVersion.h.in  MessageDescriptors.h  VariantClientOptions.h  dbprinter.h
python/MCSB/: CMakeLists.txt  ClientOptionParser.py  MCSB.i  __init__.py  __main__.py
src/: BaseClient.cc  CMakeLists.txt  Client.cc  ClientImpl.cc  ClientOptions.cc  ClientRecvManager.cc  ClientSendManager.cc  ClientWatcher.cc  MessageDescriptors.cc  MessageSegment.cc  ShmClient.cc  ShmDefs.cc  SocketClient.cc  SocketEndpoint.cc  TestingClientOptions.cc  VariantClientOptions.cc  crc32c.cc  dbprinter.cc  uptimer.cc
src/MCSB/: CCIHeader.h  ClientImpl.h  ClientImplWatcher.h  ClientRecvManager.h  ClientSendManager.h  IntrusiveList.h  MessageSegment.h  ShmClient.h  ShmDefs.h  SocketClient.h  SocketEndpoint.h  SocketProtocol.h  StdClientOptions.h  TestingClientOptions.h  crc32c.h  uptimer.h
test/: CMakeLists.txt  ClientTester.cc  ClientTester.h  PythonPaths.py.in  RandomClient.cc  RandomClient.h  rand_buf.cc  rand_buf.h  test_Client.cc  test_ClientImpl.cc  test_ClientImplRand.cc  test_ClientOptions.cc  test_ClientRecvManager.cc  test_ClientSendManager.cc  test_ClientWatcher.cc  test_GroupManager.cc  test_Groups.cc  test_IntrusiveList.cc  test_PyInterface.py  test_RandomClient.cc  test_ShmMapper.cc  test_SlabManager.cc  test_SlabRequestManager.cc  test_SlowClient.cc  test_SocketDaemon.cc  test_SocketEndpoint.cc  test_VariantClientOptions.cc  test_crc32c.cc
